# Ascend

./: .gitmodules  CMakeLists.txt  README.md  config.json  index.html
.github/workflows/: deploy.yml
docs/: DEVELOPMENT.md  USAGE.md
fsm/: elevator.fsm
fsm_generator/: main.cpp
src/: ElevatorFSM.cpp  ElevatorFSM.h  building.cpp  building.h  config.cpp  config.h  elevator.cpp  elevator.h  main.cpp  request.cpp  request.h  simulation_controller.cpp  simulation_controller.h  terminal_ui.cpp  terminal_ui.h  web_server.cpp  web_server.h
web/: script.js  style.css
